fix body overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 body{
   font-family: "Poppins", serif;
 }
+html, body {
+  overflow-x: hidden;
+}
 ul li{
   list-style-type: none;
 }
